      on top of NPCs that have the same Y position (instead of being
      layered unpredictably) This is most noticeable with vehicles that
      do not hide the leader. [Ralph, James]
    * "use item in slot" was not immediately updating item ownership
      tags [James]
    * Fix broken self-targeting on-death-bequest attacks [James]

  * New Plotscripting Stuff
    * "menu item at pixel" [Ralph, James]

  * Stuff Only Developers Will Notice
    * Support latest FreeBASIC version, by adding OPENFILE layer [Ralph]

June 06 2016 [Callipygous+1]

  * Bugfixes
    * You weren't meant to be able to resize the window in the sprite
      editor; doing so would corrupt graphics (gfx_sdl only) [Ralph]
    * Under Unix, utilities couldn't be run (e.g. to encode and import
      audio or distribute the game) on files containing the characters
      ( ) | < > # ; &.
    * Running utilities (like hspeak) didn't work on Macs where the
      OHRRPGCE hadn't been installed previously [Ralph]
    * Delete key didn't work while typing on Macs. And after resizing
      the window, text input stopped working. [Ralph]
    * Fix the Android virtual gamepad being hidden if you open a game,
      exit to the file-picker and then open a game again
    * Options for changing the window size now work on Macs [Ralph]
    * "unhide mouse cursor" now works in fullscreen too [Ralph]
    * If you are using the gfx_sdl backend, almost all menus in
      custom can make use of the extra space when the window is
      maximized

  * Stuff Only Developers Will Notice
    * 64 bit builds work now.

April 04 2016 [Callipygous]

  * New Features
    * Ported to Android phones and tablets, as well as specific support
      for the OUYA, Gamestick and FireTV Android-based consoles!
      New "Platform-specific options" menu in General Game Data.
      See http://rpg.hamsterrepublic.com/ohrrpgce/Making_Android_games
      for information about how to port your game. You can't yet use